# BontonCopilotNew

./: .env.example  README.md  pyproject.toml
config/settings/: __init__.py  base.py  development.py  production.py  staging.py
requirements/: base.txt  dev.txt  production.txt  test.txt
