[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-chatbot"
version = "0.1.0"
description = "AI-powered Travel Chatbot with multi-LLM support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "celery[redis]>=5.3.1",
    "django>=5.2.12",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "python-decouple>=3.8",
    "redis>=7.3.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
ai = [
    "anthropic>=0.85.0",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.5",
    "langchain-google-genai>=4.2.1",
    "langchain-mistralai>=1.1.2",
    "langchain-openai>=1.1.11",
    "llama-index>=0.14.18",
    "openai>=2.28.0",
    "pybreaker>=1.4.1",
    "tiktoken>=0.12.0",
]
dev = [
    "django-debug-toolbar>=6.2.0",
    "django-extension>=0.1.0",
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "watchfiles>=1.1.1",
]
kafka = [
    "confluent-kafka>=2.13.2",
    "fastavro>=1.12.1",
]
lint = [
    "django-stubs>=6.0.0",
    "djangorestframework-stubs>=3.16.8",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]
monitoring = [
    "django-prometheus>=2.4.0",
    "langfuse>=4.0.0",
    "sentry-sdk[celery,django]>=2.54.0",
]
test = [
    "factory-boy>=3.3.3",
    "faker>=40.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "pytest-xdist>=3.8.0",
    "responses>=0.26.0",
    ]

[tool.setuptools]
packages = ["config", "apps"]
